--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: minima
 title: Angela Brisotto
+mail: angela.brisotto@gmail.com
 
 description: > # this means to ignore newlines until "show_excerpts:"
 
