--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,18 @@ mail: angela.brisotto@gmail.com
 
 description: > # this means to ignore newlines until "show_excerpts:"
 
+**DROP ME A LINE** | **PER CONTATTARMI**
+
+Please feel free to contact me if you want more information about my work.  
+
+Scrivetemi per avere maggiori informazioni sul mio lavoro.
+
+<code>📮 </code>angela.brisotto@gmail.com
+
+
+
+
+
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
