--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ Scrivetemi per avere maggiori informazioni sul mio lavoro.
 
 
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
