--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,8 @@ title: Angela Brisotto
 mail: 
 
 description: > # this means to ignore newlines until "show_excerpts:"
-
-
-
-
-
+  I am a writer thriving in the field of culture and the arts and writing in Italian and English and this is the platform where I gather my publications.
+<em>Amo scrivere articoli nell’ambito della cultura e delle arti in italiano e in inglese e questo è lo spazio online dove raccolgo le mie pubblicazioni.</em>
 
 
 
@@ -54,3 +51,10 @@ theme: minima
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
+
+
+
+
+
+
+
