--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ mail:
 
 description: > # this means to ignore newlines until "show_excerpts:"
   I am a writer thriving in the field of culture and the arts and writing in Italian and English and this is the platform where I gather my publications.
-<em>Amo scrivere articoli nell’ambito della cultura e delle arti in italiano e in inglese e questo è lo spazio online dove raccolgo le mie pubblicazioni.</em>
+Amo scrivere articoli nell’ambito della cultura e delle arti in italiano e in inglese e questo è lo spazio online dove raccolgo le mie pubblicazioni.</em>
 
 
 
