--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ theme: minima
 title: Angela Brisotto
 mail: 
 
-description: > # this means to ignore newlines until "show_excerpts:"
-  I am a writer thriving in the field of culture and the arts and writing in Italian and English and this is the platform where I gather my publications.
+description: 
+I am a writer thriving in the field of culture and the arts and writing in Italian and English and this is the platform where I gather my publications.
 Amo scrivere articoli nell’ambito della cultura e delle arti in italiano e in inglese e questo è lo spazio online dove raccolgo le mie pubblicazioni.
 
 
