--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: minima
 title: Angela Brisotto
 mail: 
 
-description: I am a writer thriving in the field of culture and the arts and this is the platform where I gather my publications. Amo scrivere articoli nell’ambito della cultura e delle arti e questo è lo spazio online dove raccolgo le mie pubblicazioni.
+description: I am a writer thriving in the field of culture and the arts and this is the platform where I gather my publications. | Amo scrivere articoli nell’ambito della cultura e delle arti e questo è lo spazio online dove raccolgo le mie pubblicazioni.
 
 
 
