--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 title: Angela Brisotto
-mail: 
+mail: angela.brisotto@gmail.com
 
 description: I am a writer thriving in the field of culture and the arts and this is the platform where I gather my publications. | Amo scrivere articoli nell’ambito della cultura e delle arti e questo è lo spazio online dove raccolgo le mie pubblicazioni.
 
