--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: minima
 title: Angela Brisotto
-mail: angela.brisotto@gmail.com
+mail: 
+
+![](https://images.unsplash.com/photo-1485498128961-422168ba5f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1402&q=80)
 
 description: I am a writer thriving in the field of culture and the arts and this is the platform where I gather my publications. | Amo scrivere articoli nell’ambito della cultura e delle arti e questo è lo spazio online dove raccolgo le mie pubblicazioni.
 
