--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ theme: minima
 title: Angela Brisotto
 mail: 
 
-description: writes for culture and the arts | scrive per la cultura e le arti
+description: writes for culture and the arts  
+scrive per la cultura e le arti
 
 
 
