--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ theme: minima
 title: Angela Brisotto
 mail: 
 
-description: writes for culture and the arts  
-scrive per la cultura e le arti
+description: writes for culture and the arts - scrive per la cultura e le arti
 
 
 
