--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ theme: minima
 title: Angela Brisotto
 mail: 
 
-description: creative writing and translations - scrittura creativa e traduzioni
+description: creative writing and translations
+scrittura creativa e traduzioni
 
 
 
